funciones que no andan con el get element

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <p class="navbar-brand titulo">Simulador de plazos fijos</p>
         <form class="form-inline">
             <button class="btn btn-light btn-outline-success my-2 my-sm-0" type="button">Registrate aqui</button>
-            <input class="form-control mr-sm-2 input_izq" type="text" placeholder="Usuario">
-            <input class="form-control mr-sm-2" type="password" placeholder="Contraseña">
+            <input class="form-control mr-sm-2 input_izq" id=input_izq type="text" placeholder="Usuario">
+            <input class="form-control mr-sm-2 input_der" type="password" placeholder="Contraseña">
             <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="submit">Log-in</button>
         </form>
     </nav>
