--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav class="navbar navbar-light bg-dark">
         <p class="navbar-brand titulo">Simulador de plazos fijos</p>
         <form class="form-inline">
-            <button class="btn btn-light btn-outline-success my-2 my-sm-0" id=input_izq type="button">Registrate aqui</button>
-            <input class="form-control mr-sm-2" id="nickname" type="text" placeholder="Usuario">
-            <input class="form-control mr-sm-2" id="password" type="password" placeholder="Contraseña">
+            <button class="btn btn-light btn-outline-success my-2 my-sm-0" id=input_izq type="button" data-toggle="modal" data-target="#exampleModal">Registrate aqui</button>
+            <input class="form-control mr-sm-2" type="text" placeholder="Usuario">
+            <input class="form-control mr-sm-2" type="password" placeholder="Contraseña">
             <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="button" id="log-in">Log-in</button>
         </form>
     </nav>
@@ -45,11 +45,17 @@
             </ul>
             <article class='info_resultado container'>
                 <p>Los intereses ganados:</p>
-                <input type="text" id="InteresesRes" disabled>
+                <div data-toggle="popover" data-content="Es el resultado de los intereses sin contar el importe invertido" data-placement="bottom">
+                    <input type="text" id="InteresesRes" disabled>
+                </div>
                 <p>El plazo de dias:</p>
-                <input type="text" id="diasRes" disabled>
+                <div data-toggle="popover" data-content="Es el plazo de dias seleccionado por el usuario" data-placement="bottom">
+                    <input type="text" id="diasRes" disabled >
+                </div>
                 <p>El importe total:</p>
-                <input type="text" id="importeRes" disabled>
+                <div data-toggle="popover" data-content="Es el importe total de lo invertido mas lo ganado en intereses" data-placement="bottom"> 
+                    <input type="text" id="importeRes" disabled>
+                </div>
             </article>
             <form class="info_opciones ">
                 <section>
@@ -93,7 +99,35 @@
                 </section>
             </form>
         </main>
+<!--Modal-->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Registro</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                    <strong>Complete el formulario de registro</strong>
+                    <p>Usuario:</p>
+                    <input class="form-control mr-sm-2" id="nickname" type="text" placeholder="Usuario">
+                    <p>Contraseña:</p>
+                    <input class="form-control mr-sm-2" id="password" type="password" placeholder="Contraseña">
+                    
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" id="registrarUsuario">Registrarse</button>
+                </div>
+            </div>
+            </div>
+        </div>
 <!--Sripts-->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
         <script src="script.js"></script>
         <!--<script src="asd.js"></script>-->
     </body>
