--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     </head>
     <body>
 <!--Navbar-->
-    <nav class="navbar navbar-light bg-dark">
-        <p class="navbar-brand titulo">Simulador de plazos fijos</p>
-        <form class="form-inline">
-            <button class="btn btn-light btn-outline-success my-2 my-sm-0" id=input_izq type="button" data-toggle="modal" data-target="#exampleModal">Registrate aqui</button>
-            <input class="form-control mr-sm-2" id='nicknameLogin' type="text" placeholder="Usuario">
-            <input class="form-control mr-sm-2" id='passwordLogin' type="password" placeholder="Contraseña">
-            <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="button" id="log-in">Log-in</button>
-        </form>
-    </nav>
+        <nav class="navbar navbar-light bg-dark">
+            <p class="navbar-brand titulo">Simulador de plazos fijos</p>
+            <form class="form-inline">
+                <button class="btn btn-light btn-outline-success my-2 my-sm-0" id=input_izq type="button" data-toggle="modal" data-target="#exampleModal">Registrate aqui</button>
+                <input class="form-control mr-sm-2" id='nicknameLogin' type="text" placeholder="Usuario">
+                <input class="form-control mr-sm-2" id='passwordLogin' type="password" placeholder="Contraseña">
+                <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="button" id="log-in">Log-in</button>
+            </form>
+        </nav>
 <!--Contenido-->
-        <h1>Descubre cuantos intereses puedes cobrar</h1>
+        <section class="titulo">
+            <button type="button" class="btn btn-primary float-right" id="buttonDolar" data-toggle="modal" data-target="#modalDolar">
+                Dolar
+            </button>
+            <h1>Descubre cuantos intereses puedes cobrar</h1>
+        </section>
         <main>
             <ul class="container">
                 <li>
@@ -57,7 +62,7 @@
                     <input type="text" id="importeRes" disabled>
                 </div>
             </article>
-            <form class="info_opciones ">
+            <form class="info_opciones">
                 <section>
                     <label for="banco">Elija un banco:</label>
                     <select id="bancoValores" name="banco" onchange="mostrarBanco()">
@@ -79,8 +84,8 @@
                     <input type="number" name="dineroSimulado" id='importeCalculo'>
                 </section>
                 <section class=diasIngresados>
-                    <label for="plazoDias">Cuantos dias desea calcular? (1-365 dias)</label>
-                    <input type="range" class="form-control-range" id="plazoDias" min='1' max='365' onchange="valorSlideDias(this.value)">
+                    <label for="plazoDias">Cuantos dias desea calcular? (1-180 dias)</label>
+                    <input type="range" class="form-control-range" id="plazoDias" min='1' max='180' onchange="valorSlideDias(this.value)">
                     <article class=inputDias>    
                         <input type="text" disabled  id="nroPlazoDias">
                         <label for="otraFecha">Otro:</label>
@@ -111,7 +116,7 @@
                 </div>
                 <form class="modal-body" name="formularioContacto" id="formRegistro">
                     <strong>Complete el formulario de registro</strong>
-                    <p>Usuario:</p>
+                    <p>Nombre de usuario:</p>
                     <input class="form-control mr-sm-2" id="nickname" type="text" name="El usuario" placeholder="Usuario">
                     <p>Contraseña:</p>
                     <input class="form-control mr-sm-2" id="password" name="La contraseña" type="password" placeholder="Contraseña">
@@ -123,9 +128,28 @@
             </div>
             </div>
         </div>
+<!-- Modal API Dolar -->
+        <div class="modal fade" id="modalDolar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Cotizaciones de dolar hoy</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" id=resultadoDolar>
+                    ACA VAN LOS APIS DE COTIZACIONES DE DOLAR
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 <!--Sripts-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
         <script src="script.js"></script>
         <!--<script src="asd.js"></script>-->
