--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta nam="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
         <link rel="stylesheet" href="Css/estilos.css">
     </head>
     <body>
@@ -12,9 +13,11 @@
             <p class="navbar-brand titulo">Simulador de plazos fijos</p>
             <form class="form-inline">
                 <button class="btn btn-light btn-outline-success my-2 my-sm-0" id=input_izq type="button" data-toggle="modal" data-target="#exampleModal">Registrate aqui</button>
-                <input class="form-control mr-sm-2" id='nicknameLogin' type="text" placeholder="Usuario">
-                <input class="form-control mr-sm-2" id='passwordLogin' type="password" placeholder="Contraseña">
-                <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="button" id="log-in">Log-in</button>
+                <section id='form-login'>
+                    <input class="form-control mr-sm-2" id='nicknameLogin' type="text" placeholder="Usuario">
+                    <input class="form-control mr-sm-2" id='passwordLogin' type="password" placeholder="Contraseña">
+                    <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="button" id="log-in">Log-in</button>
+                </section>
             </form>
         </nav>
 <!--Contenido-->
@@ -85,7 +88,7 @@
                 </section>
                 <section class=diasIngresados>
                     <label for="plazoDias">Cuantos dias desea calcular? (1-180 dias)</label>
-                    <input type="range" class="form-control-range" id="plazoDias" min='1' max='180' onchange="valorSlideDias(this.value)">
+                    <input type="range" class="form-control-range" id="plazoDias" min='1' max='180' value='90' onchange="valorSlideDias(this.value)">
                     <article class=inputDias>    
                         <input type="text" disabled  id="nroPlazoDias">
                         <label for="otraFecha">Otro:</label>
@@ -139,18 +142,29 @@
                         </button>
                     </div>
                     <div class="modal-body" id=resultadoDolar>
-                    ACA VAN LOS APIS DE COTIZACIONES DE DOLAR
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal" id='buttonCloseDolar'>Close</button>
                     </div>
                 </div>
             </div>
         </div>
+<!--Historial para usuarios-->
+        <ul class="mdc-list" id="listaHistorial">
+            <li class="mdc-list-item" tabindex="0">
+                <span class="mdc-list-item__ripple"></span>
+                <span class="mdc-list-item__text col-md-auto">Banco</span>
+                <span class="mdc-list-item__text col-md-auto">Importe</span>
+                <span class="mdc-list-item__text col-md-auto">Plazo de dias</span>
+                <span class="mdc-list-item__text col-md-auto">Intereses</span>
+                <span class="mdc-list-item__text col-md-auto">ImporteFinal</span>
+            </li>
+        </ul>
 <!--Sripts-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
         <script src="script.js"></script>
         <!--<script src="asd.js"></script>-->
     </body>
