--- a/index.html
+++ b/index.html
@@ -1,171 +1,199 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>  
-        <meta charset="UTF-8">
-        <meta nam="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-        <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="Css/estilos.css">
-    </head>
-    <body>
-<!--Navbar-->
-        <nav class="navbar navbar-light bg-dark">
-            <p class="navbar-brand titulo">Simulador de plazos fijos</p>
-            <form class="form-inline">
-                <button class="btn btn-light btn-outline-success my-2 my-sm-0" id=input_izq type="button" data-toggle="modal" data-target="#exampleModal">Registrate aqui</button>
-                <section id='form-login'>
-                    <input class="form-control mr-sm-2" id='nicknameLogin' type="text" placeholder="Usuario">
-                    <input class="form-control mr-sm-2" id='passwordLogin' type="password" placeholder="Contraseña">
-                    <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="button" id="log-in">Log-in</button>
-                </section>
-            </form>
-        </nav>
-<!--Contenido-->
-        <section class="titulo">
-            <button type="button" class="btn btn-primary float-right" id="buttonDolar" data-toggle="modal" data-target="#modalDolar">
-                Dolar
+
+<head>
+    <meta charset="UTF-8">
+    <meta nam="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="Css/estilos.css">
+</head>
+
+<body>
+    <!--Navbar-->
+    <nav class="navbar navbar-light bg-dark">
+        <p class="navbar-brand titulo">Simulador de plazos fijos</p>
+        <form class="form-inline">
+            <button class="btn btn-light btn-outline-success my-2 my-sm-0" id=input_izq type="button"
+                data-toggle="modal" data-target="#exampleModal">Registrate aqui</button>
+            <section id='form-login'>
+                <input class="form-control mr-sm-2" id='nicknameLogin' type="text" placeholder="Usuario">
+                <input class="form-control mr-sm-2" id='passwordLogin' type="password" placeholder="Contraseña">
+                <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="button" id="log-in">Log-in</button>
+            </section>
+        </form>
+    </nav>
+    <!--Contenido-->
+    <section class='titulo'>
+        <h1>Descubre cuantos intereses puedes cobrar</h1>
+        <div class="mdc-touch-target-wrapper">
+            <button id="buttonDolar" data-target="#modalDolar" data-toggle="modal"
+                class="mdc-button mdc-button--touch mdc-button--raised">
+                <span class="mdc-button__ripple"></span>
+                <span class="mdc-button__label">Dolar hoy</span>
+                <span class="mdc-button__touch"></span>
             </button>
-            <h1>Descubre cuantos intereses puedes cobrar</h1>
-        </section>
-        <main>
-            <ul class="container">
-                <li>
-                    <img src='Imagenes/banco.png'>
-                </li>
-                <li class="datosInput">
-                    <span>Banco:</span>
-                    <input type="text" id="bancoRes" disabled >
-                </li>
-                <li>
-                    <img src='Imagenes/TNA.png'>
-                </li>
-                <li class="datosInput">
-                    <span>TNA:</span>
-                    <input type="text" id="TNARes" disabled>
-                </li>
-                <li>
-                    <img src='Imagenes/montoMinimo1.png'>
-                </li>
-                <li class="datosInput">
-                    <span>Monto Minimo</span>
-                    <input type="text" id="montoMinimoRes" disabled>
-                </li>
-            </ul>
-            <article class='info_resultado container'>
-                <p>Los intereses ganados:</p>
-                <div data-toggle="popover" data-content="Es el resultado de los intereses sin contar el importe invertido" data-placement="bottom">
-                    <input type="text" id="InteresesRes" disabled>
-                </div>
-                <p>El plazo de dias:</p>
-                <div data-toggle="popover" data-content="Es el plazo de dias seleccionado por el usuario" data-placement="bottom">
-                    <input type="text" id="diasRes" disabled >
-                </div>
-                <p>El importe total:</p>
-                <div data-toggle="popover" data-content="Es el importe total de lo invertido mas lo ganado en intereses" data-placement="bottom"> 
-                    <input type="text" id="importeRes" disabled>
-                </div>
-            </article>
-            <form class="info_opciones">
-                <section>
-                    <label for="banco">Elija un banco:</label>
-                    <select id="bancoValores" name="banco" onchange="mostrarBanco()">
-                        <option value="0">Banco</option>
-                        <option value="1">Banco Nacion</option> 
-                        <option value="2">Banco Santander</option> 
-                        <option value="3">Banco Galicia</option>
-                        <option value="4">Banco Patagonia</option> 
-                        <option value="5">Banco Provincia</option> 
-                        <option value="6">Banco BBVA</option> 
-                    </select>
-                </section>
-                <section>
-                    <label for="esCliente">¿Sos cliente del banco?</label>
-                    <input name="esCliente" type="checkbox" id="clienteBanco" onchange="mostrarBanco()">
-                </section>
-                <section>
-                    <label for="dineroSimulado">Ingrese un monto:</label>
-                    <input type="number" name="dineroSimulado" id='importeCalculo'>
-                </section>
-                <section class=diasIngresados>
-                    <label for="plazoDias">Cuantos dias desea calcular? (1-180 dias)</label>
-                    <input type="range" class="form-control-range" id="plazoDias" min='1' max='180' value='90' onchange="valorSlideDias(this.value)">
-                    <article class=inputDias>    
-                        <input type="text" disabled  id="nroPlazoDias">
-                        <label for="otraFecha">Otro:</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                    <input type="checkbox" onchange="otroDia()" id="fechaPlazo">
-                                </div>
+        </div>
+    </section>
+    <main>
+        <ul class="container">
+            <li>
+                <img src='Imagenes/banco.png'>
+            </li>
+            <li class="datosInput">
+                <span>Banco:</span>
+                <input type="text" id="bancoRes" disabled>
+            </li>
+            <li>
+                <img src='Imagenes/TNA.png'>
+            </li>
+            <li class="datosInput">
+                <span>TNA:</span>
+                <input type="text" id="TNARes" disabled>
+            </li>
+            <li>
+                <img src='Imagenes/montoMinimo1.png'>
+            </li>
+            <li class="datosInput">
+                <span>Monto Minimo</span>
+                <input type="text" id="montoMinimoRes" disabled>
+            </li>
+        </ul>
+        <article class='info_resultado container '>
+            <p>Los intereses ganados:</p>
+            <div data-toggle="popover" data-content="Es el resultado de los intereses sin contar el importe invertido"
+                data-placement="bottom">
+                <input type="text" id="InteresesRes" disabled>
+            </div>
+            <p>El plazo de dias:</p>
+            <div data-toggle="popover" data-content="Es el plazo de dias seleccionado por el usuario"
+                data-placement="bottom">
+                <input type="text" id="diasRes" disabled>
+            </div>
+            <p>El importe total:</p>
+            <div data-toggle="popover" data-content="Es el importe total de lo invertido mas lo ganado en intereses"
+                data-placement="bottom">
+                <input type="text" id="importeRes" disabled>
+            </div>
+        </article>
+        <form class="info_opciones">
+            <section>
+                <label for="banco">Elija un banco:</label>
+                <select id="bancoValores" name="banco" onchange="mostrarBanco()">
+                    <option value="0">Banco</option>
+                    <option value="1">Banco Nacion</option>
+                    <option value="2">Banco Santander</option>
+                    <option value="3">Banco Galicia</option>
+                    <option value="4">Banco Patagonia</option>
+                    <option value="5">Banco Provincia</option>
+                    <option value="6">Banco BBVA</option>
+                </select>
+            </section>
+            <section>
+                <label for="esCliente">¿Sos cliente del banco?</label>
+                <input name="esCliente" type="checkbox" id="clienteBanco" onchange="mostrarBanco()">
+            </section>
+            <section>
+                <label for="dineroSimulado">Ingrese un monto:</label>
+                <input type="number" name="dineroSimulado" id='importeCalculo'>
+            </section>
+            <section class=diasIngresados>
+                <label for="plazoDias">Cuantos dias desea calcular? (1-180 dias)</label>
+                <input type="range" class="form-control-range" id="plazoDias" min='1' max='180' value='90'
+                    onchange="valorSlideDias(this.value)">
+                <article class=inputDias>
+                    <input type="text" disabled id="nroPlazoDias">
+                    <label for="otraFecha">Otro:</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <input type="checkbox" onchange="otroDia()" id="fechaPlazo">
                             </div>
-                            <input type="number" id="numeroPlazo" class="form-control" aria-label="Text input with checkbox" disabled>
                         </div>
-                    </article>
-                </section>
-                <section>
-                    <input type="button" value="Enviar" id="enviarPresupuesto">
-                </section>
-            </form>
-        </main>
-<!--Modal-->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
+                        <input type="number" id="numeroPlazo" class="form-control" aria-label="Text input with checkbox"
+                            disabled>
+                    </div>
+                </article>
+            </section>
+            <section>
+                <div class="mdc-touch-target-wrapper">
+                    <button id="enviarPresupuesto"
+                        class="mdc-button mdc-button--touch mdc-button--raised">
+                        <span class="mdc-button__ripple"></span>
+                        <span class="mdc-button__label">Enviar</span>
+                        <span class="mdc-button__touch"></span>
+                    </button>
+                </div>
+            </section>
+        </form>
+    </main>
+    <!--Modal-->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Registro</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                    <h5 class="modal-title" id="exampleModalLabel">Registro</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <form class="modal-body" name="formularioContacto" id="formRegistro">
                     <strong>Complete el formulario de registro</strong>
                     <p>Nombre de usuario:</p>
-                    <input class="form-control mr-sm-2" id="nickname" type="text" name="El usuario" placeholder="Usuario">
+                    <input class="form-control mr-sm-2" id="nickname" type="text" name="El usuario"
+                        placeholder="Usuario">
                     <p>Contraseña:</p>
-                    <input class="form-control mr-sm-2" id="password" name="La contraseña" type="password" placeholder="Contraseña">
+                    <input class="form-control mr-sm-2" id="password" name="La contraseña" type="password"
+                        placeholder="Contraseña">
                 </form>
                 <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary" id="registrarUsuario">Registrarse</button>
-                </div>
-            </div>
-            </div>
-        </div>
-<!-- Modal API Dolar -->
-        <div class="modal fade" id="modalDolar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Cotizaciones de dolar hoy</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body" id=resultadoDolar>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal" id='buttonCloseDolar'>Close</button>
-                    </div>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" id="registrarUsuario">Registrarse</button>
                 </div>
             </div>
         </div>
-<!--Historial para usuarios-->
-        <ul class="mdc-list" id="listaHistorial">
-            <li class="mdc-list-item" tabindex="0">
-                <span class="mdc-list-item__ripple"></span>
-                <span class="mdc-list-item__text col-md-auto">Banco</span>
-                <span class="mdc-list-item__text col-md-auto">Importe</span>
-                <span class="mdc-list-item__text col-md-auto">Plazo de dias</span>
-                <span class="mdc-list-item__text col-md-auto">Intereses</span>
-                <span class="mdc-list-item__text col-md-auto">ImporteFinal</span>
-            </li>
-        </ul>
-<!--Sripts-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-        <script src="script.js"></script>
-        <!--<script src="asd.js"></script>-->
-    </body>
+    </div>
+    <!-- Modal API Dolar -->
+    <div class="modal fade" id="modalDolar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Cotizaciones de dolar hoy</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id=resultadoDolar>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                        id='buttonCloseDolar'>Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Historial para usuarios-->
+    <ul class="mdc-list" id="listaHistorial">
+        <li class="mdc-list-item" tabindex="0">
+            <span class="mdc-list-item__ripple"></span>
+            <span class="mdc-list-item__text col-md-auto">Banco</span>
+            <span class="mdc-list-item__text col-md-auto">Importe</span>
+            <span class="mdc-list-item__text col-md-auto">Plazo de dias</span>
+            <span class="mdc-list-item__text col-md-auto">Intereses</span>
+            <span class="mdc-list-item__text col-md-auto">ImporteFinal</span>
+        </li>
+    </ul>
+    <!--Sripts-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <script src="script.js"></script>
+    <!--<script src="asd.js"></script>-->
+</body>
+
 </html>
